test: stabilize remaining service builds